Add readme, controls

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
 
+  <p>Click and drag to set the velocity and angle of a satellite. Release to launch!</p>
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.js'></script>
 
